# bible-ai

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  Voice 036.txt  gmunk_tg.html
.github/: dependabot.yml
app/: README.md  index.html  package-lock.json  package.json  wdio.conf.mts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/: safety-resources.json
app/src-tauri/src/: credentials.rs  db.rs  lib.rs  ollama.rs  safety.rs  sidecar.rs  user_db.rs
data/: corpus-lock.json  schema.sql
docs/: accessibility-release-gate.md  ai-risk-eval-plan.md  architecture.md  community-channel-policy.md  content-bom.md  corpus-build.md  council-confidence-review.md  council-protocol.md  council-real-world-qa.md  council-transparency-execution-plan.md  council-transparency-ui-spec.md  council-transparency-visualization-plan.md  data-model-roadmap.md  data-sources.md  development-implementation-plan.md  distribution-channel-decision.md  feature-roadmap.md  github-release-process.md  implementation-checklist.md  install-macos.md  install-windows.md  institutional-pilot-readiness.md  learning-and-systematic-theology-plan.md  learning-data-model.md  learning-technical-implementation.md  learning-testing-and-release-plan.md  learning-ui-workflows.md  macos-distribution-plan.md  manual-release-qa-report.md  open-resource-ingestion-plan.md  phase-13-corpus-roadmap.md  privacy-and-distribution.md  quality-ops-plan.md  release-notes.md  resource-source-review-template.md  (+8 more)
(+488 files in other folders)
