[package]
name = "app"
version = "0.1.0"
description = "Offline-first, evidence-auditable Bible study desktop application"
authors = ["Bible AI contributors"]
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tauri-plugin-dialog = "2"
# Compile the native credential store on both supported desktop platforms.
# Without apple-native, keyring falls back to its in-memory mock store on macOS
# and provider credentials disappear when the app exits.
keyring = { version = "3", features = ["apple-native", "windows-native"] }
krilla = { version = "0.8.2", default-features = false, features = ["simple-text"] }
